@@ -1,71 +1,102 @@
 package com.fspann.index.paper;
 
-import com.fspann.common.EncryptedPoint;
-
 import java.io.Serializable;
-import java.security.SecureRandom;
 import java.util.*;
 
 /**
- * GreedyPartitioner (Algorithm-2)
- * --------------------------------
- * Implements multi-table LSH and partitioning strategy with forward-secure indexing.
- * This engine:
- *   - Builds multiple LSH partitions using G_m and divides data into smaller, locality-aware subregions.
- *   - Supports forward security by implementing key evolution and selective re-encryption.
- *   - Provides fast query retrieval while maintaining secure storage of metadata and vectors.
+ * GreedyPartitioner (MSANNP Algorithm-2)
+ *
+ * Produces:
+ *   • Sorted index I = [ [C_low, C_up], tag ]
+ *   • tag → list of IDs  (ID-ONLY, no ciphertexts)
+ *
+ * Guarantees:
+ *   • Deterministic build (seeded)
+ *   • Stable lexicographic ordering
+ *   • All identical codes remain together
+ *   • No subset exceeds w = max frequency of identical codes
+ *
+ * Fully compatible with:
+ *   - PartitionedIndexService
+ *   - QueryServiceImpl (D1 limiter, prefix refinement)
+ *   - Forward-secure rebuild / restore
  */
 public final class GreedyPartitioner {
 
     private GreedyPartitioner() {}
 
-    /** In-memory item used during building. */
+    // ============================================================
+    // Item (ID + code only)
+    // ============================================================
     public static final class Item {
         public final String id;
-        public final EncryptedPoint point;
         public final BitSet code;
-        public Item(String id, EncryptedPoint point, BitSet code) {
-            this.id = Objects.requireNonNull(id);
-            this.point = Objects.requireNonNull(point);
-            this.code = (BitSet) Objects.requireNonNull(code).clone();
+
+        public Item(String id, BitSet code) {
+            this.id = Objects.requireNonNull(id, "id");
+            this.code = (BitSet) Objects.requireNonNull(code, "code").clone();
         }
     }
 
-    /** Subset bounds + tag entry for the map index I. */
+    // ============================================================
+    // SubsetBounds (immutable interval)
+    // ============================================================
     public static final class SubsetBounds implements Serializable {
-        public final BitSet lower;   // inclusive
-        public final BitSet upper;   // inclusive
-        public final String tag;     // random tag (opaque)
-        public final int codeBits;   // for lexicographic comparisons
+        public final BitSet lower;
+        public final BitSet upper;
+        public final String tag;
+        public final int codeBits;
+
         public SubsetBounds(BitSet lower, BitSet upper, String tag, int codeBits) {
-            this.lower = (BitSet)lower.clone();
-            this.upper = (BitSet)upper.clone();
-            this.tag = Objects.requireNonNull(tag);
+            this.lower = cloneImmutable(lower);
+            this.upper = cloneImmutable(upper);
+            this.tag = Objects.requireNonNull(tag, "tag");
             this.codeBits = codeBits;
         }
-        @Override public String toString() {
-            return "SubsetBounds{tag="+tag+",lower="+asBin(lower, codeBits)+",upper="+asBin(upper, codeBits)+"}";
+
+        private static BitSet cloneImmutable(BitSet b) {
+            return (BitSet) b.clone(); // defensive immutability
+        }
+
+        @Override
+        public String toString() {
+            return "SubsetBounds{tag=" + tag +
+                    ", lower=" + asBin(lower, codeBits) +
+                    ", upper=" + asBin(upper, codeBits) +
+                    "}";
         }
     }
 
-    /** Output of a build pass. */
+    // ============================================================
+    // Build result
+    // ============================================================
     public static final class BuildResult {
-        public final List<SubsetBounds> indexI;         // sorted by lower
-        public final Map<String, List<EncryptedPoint>> tagToSubset; // tag -> points
+        public final List<SubsetBounds> indexI;
+        public final Map<String, List<String>> tagToIds;
         public final int w;
-        public BuildResult(List<SubsetBounds> indexI, Map<String, List<EncryptedPoint>> tagToSubset, int w) {
+
+        public BuildResult(List<SubsetBounds> indexI,
+                           Map<String, List<String>> tagToIds,
+                           int w) {
             this.indexI = indexI;
-            this.tagToSubset = tagToSubset;
+            this.tagToIds = tagToIds;
             this.w = w;
         }
     }
 
-    // Comparator: lexicographic BitSet comparison using fixed codeBits
+    // ============================================================
+    // Lexicographic BitSet comparator (MSB → LSB)
+    // ============================================================
     public static final class CodeComparator implements Comparator<BitSet> {
         private final int codeBits;
-        public CodeComparator(int codeBits) { this.codeBits = codeBits; }
-        @Override public int compare(BitSet a, BitSet b) {
-            for (int i = codeBits - 1; i >= 0; i--) { // msb-first
+
+        public CodeComparator(int codeBits) {
+            this.codeBits = codeBits;
+        }
+
+        @Override
+        public int compare(BitSet a, BitSet b) {
+            for (int i = codeBits - 1; i >= 0; i--) {
                 boolean ai = a.get(i);
                 boolean bi = b.get(i);
                 if (ai != bi) return ai ? 1 : -1;
@@ -74,60 +105,94 @@ public final class GreedyPartitioner {
         }
     }
 
-    /** Build partitions from items already coded to BitSet C(v). */
+    // ============================================================
+    // Algorithm-2 (Peng MSANNP)
+    // ============================================================
     public static BuildResult build(List<Item> items, int codeBits, long tagSeed) {
+
         if (items == null || items.isEmpty()) {
-            return new BuildResult(Collections.emptyList(), Collections.emptyMap(), 0);
+            return new BuildResult(List.of(), Map.of(), 0);
         }
 
-        // Group by exact code to compute w and to prevent splitting
-        Map<BitSet, List<Item>> byCode = new TreeMap<>(new CodeComparator(codeBits));
-        for (Item it : items) {
-            BitSet key = (BitSet) it.code.clone();
-            byCode.computeIfAbsent(key, k -> new ArrayList<>()).add(it);
-        }
-        int w = 0;
-        for (List<Item> group : byCode.values()) w = Math.max(w, group.size());
-
-        // Sweep groups in lex order, forming chunks of <= w, respecting whole-code groups.
-        List<SubsetBounds> indexI = new ArrayList<>();
-        Map<String, List<EncryptedPoint>> tagToSubset = new LinkedHashMap<>();
-
-        SecureRandom tagRnd = new SecureRandom(longToBytes(tagSeed));
         CodeComparator cmp = new CodeComparator(codeBits);
 
-        List<Map.Entry<BitSet, List<Item>>> groups = new ArrayList<>(byCode.entrySet());
-        int i = 0;
-        while (i < groups.size()) {
-            int taken = 0;
-            BitSet lower = (BitSet) groups.get(i).getKey().clone();
-            List<EncryptedPoint> subset = new ArrayList<>();
+        // Step 1: group identical codes (deterministic)
+        Map<BitSet, List<Item>> grouped = new TreeMap<>(cmp);
 
-            int start = i;
-            while (i < groups.size()) {
-                List<Item> g = groups.get(i).getValue();
-                if (taken + g.size() > w && taken > 0) break; // next subset
-                subsetAdd(subset, g);
-                taken += g.size();
-                i++;
-            }
-            BitSet upper = (BitSet) groups.get(i - 1).getKey().clone();
-            String tag = randomTag(tagRnd);
-
-            indexI.add(new SubsetBounds(lower, upper, tag, codeBits));
-            tagToSubset.put(tag, subset);
+        for (Item it : items) {
+            BitSet key = (BitSet) it.code.clone();
+            grouped.computeIfAbsent(key, k -> new ArrayList<>()).add(it);
         }
 
-        // Ensure indexI is sorted by lower
-        indexI.sort((a, b) -> cmp.compare(a.lower, b.lower));
-        return new BuildResult(indexI, tagToSubset, w);
+        // Step 2: compute w = max group size
+        int w = 0;
+        for (List<Item> g : grouped.values()) {
+            w = Math.max(w, g.size());
+        }
+
+        // Step 3: greedy sweep to form subsets ≤ w
+        List<SubsetBounds> I = new ArrayList<>();
+        Map<String, List<String>> tagMap = new LinkedHashMap<>();
+
+        List<Map.Entry<BitSet, List<Item>>> G =
+                new ArrayList<>(grouped.entrySet());
+
+        // Deterministic PRNG for tags
+        Random rnd = new Random(tagSeed);
+
+        int i = 0;
+        while (i < G.size()) {
+
+            int taken = 0;
+            BitSet lower = (BitSet) G.get(i).getKey().clone();
+            List<String> ids = new ArrayList<>();
+
+            while (i < G.size()) {
+                List<Item> grp = G.get(i).getValue();
+
+                // Oversized identical-code group → standalone interval
+                if (grp.size() > w) {
+                    if (taken == 0) {
+                        BitSet key = G.get(i).getKey();
+                        String tag = deterministicTag(rnd);
+
+                        I.add(new SubsetBounds(key, key, tag, codeBits));
+
+                        List<String> only = new ArrayList<>(grp.size());
+                        for (Item it : grp) only.add(it.id);
+                        tagMap.put(tag, only);
+
+                        i++;
+                    }
+                    break;
+                }
+
+                if (taken + grp.size() > w && taken > 0) break;
+
+                for (Item it : grp) ids.add(it.id);
+                taken += grp.size();
+                i++;
+            }
+
+            if (!ids.isEmpty()) {
+                BitSet upper = (BitSet) G.get(i - 1).getKey().clone();
+                String tag = deterministicTag(rnd);
+
+                I.add(new SubsetBounds(lower, upper, tag, codeBits));
+                tagMap.put(tag, ids);
+            }
+        }
+
+        // Final sort by lower bound (defensive, deterministic)
+        I.sort((a, b) -> cmp.compare(a.lower, b.lower));
+
+        return new BuildResult(I, tagMap, w);
     }
 
-    private static void subsetAdd(List<EncryptedPoint> subset, List<Item> group) {
-        for (Item it : group) subset.add(it.point);
-    }
-
-    private static String randomTag(SecureRandom rnd) {
+    // ============================================================
+    // Utilities
+    // ============================================================
+    private static String deterministicTag(Random rnd) {
         byte[] b = new byte[16];
         rnd.nextBytes(b);
         StringBuilder sb = new StringBuilder(32);
@@ -137,14 +202,9 @@ public final class GreedyPartitioner {
 
     private static String asBin(BitSet bs, int bits) {
         StringBuilder sb = new StringBuilder(bits);
-        for (int i = bits - 1; i >= 0; i--) sb.append(bs.get(i) ? '1' : '0');
+        for (int i = bits - 1; i >= 0; i--) {
+            sb.append(bs.get(i) ? '1' : '0');
+        }
         return sb.toString();
-    }
-
-    private static byte[] longToBytes(long x) {
-        return new byte[] {
-                (byte)(x >>> 56), (byte)(x >>> 48), (byte)(x >>> 40), (byte)(x >>> 32),
-                (byte)(x >>> 24), (byte)(x >>> 16), (byte)(x >>>  8), (byte)(x)
-        };
     }
 }
